<resources>
    <string name="app_name">EAM - Group 9</string>
    <string name="SplashText">Pepper in der Senior:Innen- WG </string>
    <string name="Group9">Gruppe 9</string>
    <string name="Members">Simon Froitzheim \nKatharina Linden \nLaura Nehler \nChristina Löcker</string>
    <string name="pepperSplash">pepper splash</string>
    <string name="TH_Logo">"TH Logo "</string>
    <string name="ccl_logo">"CCL Logo "</string>
    <string name="userwish">Wie schön Dich zu sehen! \n Was möchtest Du heute machen?</string>
    <string name="entertainment">Unterhaltung</string>
    <string name="practice">Logopädie \n Übungen</string>
    <string name="button_inscription_back">Zurück</string>
    <string name="use_buttons">Bitte wähle einen der Buttons, um anzufangen!</string>
    <string name="THLogo">"Th Logo "</string>
    <string name="SmsButton">SMS</string>
    <string name="NewspaperButton">Zeitung lesen</string>
    <string name="QuizButton">Quiz</string>
    <string name="BackgroundDescription">Background</string>
    <string name="redBox">TH Stripes - redBox</string>
    <string name="orangeBox">Th Stripes - orange Box</string>
    <string name="Welcome">Schön Dich zu sehen! Was möchtest Du heute machen? Wir können uns unterhalten oder wir üben! Bitte drücke den entsprechenden Button um anzufangen!</string>
    <string name="title_activity_test">Test</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="ButtonCountry">Länder - Infos und mehr</string>
    <string name="Record">Text aufnehmen</string>
    <string name="Message">SMS Nachricht</string>
    <string name="backButton">Zurück</string>
    <string name="MessageText">Nachricht</string>
    <string name="PhoneNumber">Telefonnummer </string>
    <string name="record">"Zum Aufnehmen \n Button gedrückt halten! "</string>
    <string name="SentMessage">Die Nachricht wurde versendet.</string>
</resources>