<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageView
        android:id="@+id/iv_background_splash"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/BackgroundDescription"
        app:srcCompat="@drawable/background4"
        tools:layout_editor_absoluteX="537dp"
        tools:layout_editor_absoluteY="134dp" />

    <TextView
        android:id="@+id/project_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/SplashText"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_purple_box"
        android:layout_width="320dp"
        android:layout_height="8dp"
        android:background="#9C27B0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_orange_box"
        android:layout_width="320dp"
        android:layout_height="8dp"
        android:background="#DAFF5722"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_purple_box" />

    <TextView
        android:id="@+id/tv_red_box"
        android:layout_width="320dp"
        android:layout_height="8dp"
        android:background="#F44336"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_orange_box"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/iv_pepper_splash"
        android:layout_width="447dp"
        android:layout_height="405dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/pepperSplash"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.153"
        app:srcCompat="@drawable/pepper_round" />

    <ImageView
        android:id="@+id/iv_th_logo"
        android:layout_width="122dp"
        android:layout_height="65dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:contentDescription="@string/TH_Logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/logo_th" />

    <TextView
        android:id="@+id/tv_group9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="220dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/Group9"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/project_title" />

    <TextView
        android:id="@+id/tv_members"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="600dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/roboto_bold"
        android:gravity="center_vertical"
        android:text="@string/Members"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_group9" />

    <ImageView
        android:id="@+id/iv_cclLogo"
        android:layout_width="315dp"
        android:layout_height="97dp"
        android:layout_marginStart="84dp"
        android:layout_marginBottom="25dp"
        android:contentDescription="@string/ccl_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_pepper_splash"
        app:layout_constraintVertical_bias="0.692"
        app:srcCompat="@drawable/ccl_logo" />

</androidx.constraintlayout.widget.ConstraintLayout>